@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: regexp.test,v 1.14 2010/02/21 18:30:44 mdejong Exp $
+# RCS: @(#) $Id: regexp.test,v 1.15 2010/02/27 04:19:38 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -341,6 +341,9 @@ test regexp-7.28 {dollar zero is not a backslash replacement} {
 test regexp-7.29 {dollar zero is not a backslash replacement} {
     list [regsub a+ aaa {\\} foo] $foo
 } {1 \\}
+test regexp-7.30 {escaped - is not part of a range} {
+    list [regexp {^[\-a-z]+$} "-ab"] [regexp {^[a-z\-]+$} "-ab"]
+} {1 1}
 
 test regexp-8.1 {case conversion in regsub} {
     list [regsub -nocase a(a+) xaAAaAAay & foo] $foo
